数独数据生成并验证

--- a/www/index.html
+++ b/www/index.html
@@ -5,7 +5,7 @@
 
 <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scale=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <title>数独游戏</title>
     <link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
